# scan2bim-converter

./: .gitignore  README.md  package-lock.json  package.json
.github/workflows/: build-potreeconverter.yml
renderer/: app.js  index.html  styles.css
scripts/: package-linux.sh  package-macos.sh  package-windows.ps1
src-tauri/: Cargo.toml  tauri.bundle.conf.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: converter.rs  lib.rs  main.rs
