[package]
name = "scan2bim-converter"
version = "0.1.0"
description = "Scan2BIM desktop converter: E57 to Potree"
authors = ["Sohail Saifi"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "scan2bim_converter_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.4", features = [] }

[dependencies]
tauri = { version = "2.1.1", features = ["protocol-asset"] }
tauri-plugin-dialog = "2.0.4"
tauri-plugin-shell  = "2.0.2"
tauri-plugin-fs     = "2.0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["process", "io-util", "sync", "rt", "macros"] }
sysinfo = "0.32"
uuid = { version = "1", features = ["v4"] }
once_cell = "1"

[profile.release]
opt-level = 3
codegen-units = 16
strip = true
panic = "abort"
